--- a/public/index.html
+++ b/public/index.html
@@ -161,7 +161,7 @@
       </div>
       <div class="col-md-6 align-self-center text-center text-md-left">
         <div class="content">
-          <h2 class="subheading text-white font-weight-bold mb-10">Artesan stained glass window design.</h2>
+          <h2 class="subheading text-white font-weight-bold mb-10">Artisan stained glass window design.</h2>
           <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia vel labore, deleniti minima nisi, velit atque quaerat impedit ea maxime sunt accusamus at obcaecati dolor iure iusto omnis quis eum. <!-- raw HTML omitted --><!-- raw HTML omitted --> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis commodi odit, illo, qui aliquam dol</p>
         </div>
       </div>
