Move to hand icon.

--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,7 @@
       <div class="col-md-4">
           
         <div class="mb-40 text-center text-md-left">
-          <i class="d-inlin-block h2 mb-10 tf-ion-alert"></i>
+          <i class="d-inlin-block h2 mb-10 tf-ion-android-hand"></i>
           <h4 class="font-weight-bold mb-2">Hand built</h4>
           <p>These are hand built windows not to be confused with mass produced factory work.</p>
         </div>
