--- a/public/contact/index.html
+++ b/public/contact/index.html
@@ -82,8 +82,8 @@
         <h2 class="font-weight-bold mb-4">Split Light Glass Studio</h2>
         <p></p>
         <ul class="list-unstyled contact-list">
-          <li class="mb-3"><a href="tel:Mark%20Ryan"><i class="tf-ion-ios-telephone mr-2"></i>
-              Mark Ryan</a></li>
+          <li class="mb-3"><a href="tel:Mark%20%28&#43;64%29%20022%20063%202146"><i class="tf-ion-ios-telephone mr-2"></i>
+              Mark (&#43;64) 022 063 2146</a></li>
           <li class="mb-3"><a href="mailto:markryan1956@gmail.com"><i class="tf-ion-email mr-2"></i>markryan1956@gmail.com</a></li>
           <li class="mb-3"><i class="tf-ion-ios-location mr-2"></i>Rotorua, New Zealand
           </li>
