--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
 			<div class="col-md-6 align-self-center text-center text-md-left">
 				<div class="block">
 					<h1 class="font-weight-bold mb-4 font-size-60">The Split Light Glass Studio.</h1>
-					<p class="mb-4">In the beautiful North Island of New Zealand, we solely concentrate on producing bespoke lead light windows. Our windows are designed specifically for your home to be enjoyed on a daily basis. Collectively we have decades of experience.</p>
+					<p class="mb-4">In the beautiful North Island of New Zealand, we solely concentrate on producing lead light windows. Our windows are designed specifically for your home to be enjoyed on a daily basis. Collectively we have decades of experience.</p>
 					
 					
 					<a href="/contact" class="btn btn-main">Contact Us</a>
@@ -99,7 +99,7 @@
     <div class="row">
       <div class="col-12">
         <div class="heading">
-          <h2>Bespoke leadlight glass design</h2>
+          <h2>Leadlight glass design</h2>
         </div>
       </div>
       <div class="col-md-4">
@@ -162,7 +162,7 @@
       <div class="col-md-6 align-self-center text-center text-md-left">
         <div class="content">
           <h2 class="subheading text-white font-weight-bold mb-10">Artisan stained glass window design.</h2>
-          <p class="text-white">In the beautiful North Island of New Zealand, we solely concentrate on producing bespoke lead light windows. Our windows are designed specifically for your home to be enjoyed on a daily basis. Collectively we have decades of experience.</p>
+          <p class="text-white">In the beautiful North Island of New Zealand, we solely concentrate on producing lead light windows. Our windows are designed specifically for your home to be enjoyed on a daily basis. Collectively we have decades of experience.</p>
         </div>
       </div>
     </div>
