--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 text-center mb-5 mb-md-0">
-				<img class="img-fluid" src="/images/logan-cameron-vrr-nnei4pE-unsplash.jpg" alt="">
+				<img class="img-fluid" src="/images/jen1.jpg" alt="">
 			</div>
 			<div class="col-md-6 align-self-center text-center text-md-left">
 				<div class="block">
@@ -124,7 +124,7 @@
         
       </div>
       <div class="col-md-4 text-center align-self-center mb-4 mb-md-0">
-        <img class="img-fluid" src="/images/IMG_20201126_154235.jpg" alt="">
+        <img class="img-fluid" src="/images/sid2.jpg" alt="">
       </div>
       <div class="col-md-4">
           
@@ -157,7 +157,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-6 text-center mb-5 mb-lg-0">
-        <img class="img-fluid" src="/images/kimberly-eschenbauch-03Eu7zSySPo-unsplash.jpg" alt="">
+        <img class="img-fluid" src="/images/sid1.jpg" alt="">
       </div>
       <div class="col-md-6 align-self-center text-center text-md-left">
         <div class="content">
